Work on narrowins