@@ -36,12 +36,12 @@ import org.apache.http.client.utils.URLEncodedUtils;
 import org.apache.http.message.BasicNameValuePair;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
 
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -315,6 +315,7 @@ public class UrlUtil {
 		return theCtx.getResourceDefinition(resourceName);
 	}
 
+	@Nonnull
 	public static Map<String, String[]> parseQueryString(String theQueryString) {
 		HashMap<String, List<String>> map = new HashMap<>();
 		parseQueryString(theQueryString, map);
@@ -559,14 +560,8 @@ public class UrlUtil {
 		for (int i = 0; i < theString.length(); i++) {
 			char nextChar = theString.charAt(i);
 			if (nextChar == '%' || (nextChar == '+' && shouldEscapePlus)) {
-				try {
-					// Yes it would be nice to not use a string "UTF-8" but the equivalent
-					// method that takes Charset is JDK10+ only... sigh....
-					return URLDecoder.decode(theString, "UTF-8");
-				} catch (UnsupportedEncodingException e) {
-					throw new Error(Msg.code(1743) + "UTF-8 not supported, this shouldn't happen", e);
-				}
-			}
+                return URLDecoder.decode(theString, StandardCharsets.UTF_8);
+            }
 		}
 		return theString;
 	}
